--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,7 @@ services:
     restart: unless-stopped
     ports:
       - "${MONGO_PORT}:${MONGO_PORT}"
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
-      - DB_HOST=mongodb
-      - DB_USER=$MONGODB_USER
-      - DB_PASSWORD=$MONGODB_PASSWORD
-      - DB_NAME=$MONGODB_DATABASE
-      - DB_PORT=$MONGO_PORT
-      - CLIENT_ORIGIN=$CLIENT_ORIGIN
+    env_file: ./database/.env
     networks:
       - backend
     volumes:
