--- a/.env
+++ b/.env
@@ -1,8 +1,29 @@
-ME_CONFIG_MONGODB_ADMINUSERNAME=root
-ME_CONFIG_MONGODB_ADMINPASSWORD=password
-ME_CONFIG_BASICAUTH_USERNAME=mexpress
-ME_CONFIG_BASICAUTH_PASSWORD=mexpress
-MONGO_EXPRESS_PORT=8081
-NODE_LOCAL_PORT=3000
-NODE_DOCKER_PORT=9000
-MONGO_PORT=27017
+#############################################################################
+# This is the main Docker Environment Variables:
+# For each environment you will find a seperate .env file in each environment
+#############################################################################
+# Environments in Scope:
+# - Database Server
+# - Database Client
+# - Server 
+# - Client
+# - Reverse Proxy
+#############################################################################
+# - Database Server Mongo
+#############################################################################
+DATABASE_SERVER_CONTAINER_NAME=mongo
+DATABASE_SERVER_PORT=27017
+#############################################################################
+# - Database Client
+#############################################################################
+DATABASE_CLIENT_CONTAINER_NAME=mexpress
+DATABASE_CLIENT_PORT=8081
+#############################################################################
+# - Server 
+#############################################################################
+SERVER_LOCAL_PORT=3000
+SERVER_DOCKER_PORT=9000
+#############################################################################
+# - Reverse Proxy 
+#############################################################################
+REVERSE_PROXY_PORT=443
