--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,32 @@
 version: "3.8"
 services:
-  mongo:
+  database_server:
     image: mongo
-    container_name: mongo
+    container_name: ${DATABASE_SERVER_CONTAINER_NAME}
     restart: unless-stopped
     ports:
-      - "${MONGO_PORT}:${MONGO_PORT}"
+      - "${DATABASE_SERVER_PORT}:${DATABASE_SERVER_PORT}"
     env_file: ./database/.env
     networks:
       - backend
     volumes:
       - ./database/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
-  mongo-express:
+  database_client:
     image: mongo-express
-    container_name: mexpress
-    environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=${ME_CONFIG_MONGODB_ADMINUSERNAME}
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=${ME_CONFIG_MONGODB_ADMINPASSWORD}
-      - ME_CONFIG_MONGODB_URL=mongodb://${ME_CONFIG_MONGODB_ADMINUSERNAME}:${ME_CONFIG_MONGODB_ADMINPASSWORD}@mongo:27017/?authSource=admin
-      - ME_CONFIG_BASICAUTH_USERNAME=${ME_CONFIG_BASICAUTH_USERNAME}
-      - ME_CONFIG_BASICAUTH_PASSWORD=${ME_CONFIG_BASICAUTH_PASSWORD}
+    container_name: ${DATABASE_CLIENT_CONTAINER_NAME}
+    env_file: ./databaseclient/.env
     links:
-      - mongo
+      - database_server
     restart: unless-stopped
     ports:
-      - "${MONGO_EXPRESS_PORT}:${MONGO_EXPRESS_PORT}"
+      - "${DATABASE_CLIENT_PORT}:${DATABASE_CLIENT_PORT}"
     networks:
       - backend
 
   server:
     depends_on:
-      - mongo
+      - database_server
     volumes:
       - ./server:/usr/src/app
       - /usr/src/app/node_modules
@@ -40,10 +35,21 @@ services:
       dockerfile: Dockerfile
     restart: unless-stopped
     ports:
-      - ${NODE_DOCKER_PORT}:${NODE_LOCAL_PORT}
+      - ${SERVER_DOCKER_PORT}:${SERVER_LOCAL_PORT}
     env_file: ./server/.env
     networks:
       - backend
+  
+  reverse_proxy:
+    image: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./key.pem:/root/ssl/key.pem
+      - ./cert.pem:/root/ssl/cert.pem
+    ports:
+      - ${REVERSE_PROXY_PORT}:${REVERSE_PROXY_PORT}
+    depends_on:
+      - server
 
 networks:
   backend:
