--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,9 +43,9 @@ services:
   reverse_proxy:
     image: nginx
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./key.pem:/root/ssl/key.pem
-      - ./cert.pem:/root/ssl/cert.pem
+      - ./reverse_proxy/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./reverse_proxy/key.pem:/root/ssl/key.pem
+      - ./reverse_proxy/cert.pem:/root/ssl/cert.pem
     ports:
       - ${REVERSE_PROXY_PORT}:${REVERSE_PROXY_PORT}
     depends_on:
